Init ansible-lint configuration; Refactor to not use reserved variable "namespace"

--- a/roles/generate_kubemanifests/templates/automationcontroller.yml.j2
+++ b/roles/generate_kubemanifests/templates/automationcontroller.yml.j2
@@ -3,7 +3,7 @@ apiVersion: automationcontroller.ansible.com/v1beta1
 kind: AutomationController
 metadata:
   name: {{ name_controller }}
-  namespace: {{ namespace }}
+  namespace: {{ ocp_namespace }}
 spec:
   admin_user: admin
   auto_upgrade: false
