--- a/roles/generate_kubemanifests/templates/eda.yml.j2
+++ b/roles/generate_kubemanifests/templates/eda.yml.j2
@@ -3,7 +3,7 @@ apiVersion: eda.ansible.com/v1alpha1
 kind: EDA
 metadata:
   name: {{ name_eda}}
-  namespace: {{ namespace }}
+  namespace: {{ ocp_namespace }}
 spec:
   activation_worker:
     replicas: 2
