--- a/roles/generate_kubemanifests/templates/configmap.yml.j2
+++ b/roles/generate_kubemanifests/templates/configmap.yml.j2
@@ -3,5 +3,5 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ item.name }}
-  namespace: {{ namespace }}
+  namespace: {{ ocp_namespace }}
 data: {{ item.data | to_yaml }}
