--- a/roles/generate_kubemanifests/templates/secret.yml.j2
+++ b/roles/generate_kubemanifests/templates/secret.yml.j2
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ item.name }}
-  namespace: {{ namespace }}
+  namespace: {{ ocp_namespace }}
 data:
 {% for k,v in item.data.items() %}
   {{ k }}: {{ v | b64encode }}
