--- a/roles/generate_kubemanifests/templates/ansibleautomationplatform.yml.j2
+++ b/roles/generate_kubemanifests/templates/ansibleautomationplatform.yml.j2
@@ -11,6 +11,33 @@ spec:
 
   controller:
     disabled: true
+    admin_user: admin
+    auto_upgrade: true
+    create_preload_data: false
+    garbage_collect_secrets: true
+    image_pull_policy: IfNotPresent
+    ingress_type: Route
+    ipv6_disabled: false
+    loadbalancer_ip: ''
+    loadbalancer_port: 80
+    loadbalancer_protocol: http
+    metrics_utility_cronjob_gather_schedule: '@hourly'
+    metrics_utility_cronjob_report_schedule: '@monthly'
+    metrics_utility_enabled: false
+    metrics_utility_pvc_claim_size: 5Gi
+    no_log: true
+    postgres_keepalives_count: 5
+    postgres_keepalives_idle: 5
+    postgres_keepalives_interval: 5
+    postgres_keepalives: true
+    postgres_storage_class: lvms-vg1
+    projects_persistence: false
+    projects_storage_access_mode: ReadWriteMany
+    projects_storage_size: 8Gi
+    replicas: 1
+    route_tls_termination_mechanism: Edge
+    set_self_labels: true
+    task_privileged: false
 
   eda:
     disabled: true
