Update ansibleautomationplatform template to set more defaults for eda and hub

--- a/roles/generate_kubemanifests/templates/ansibleautomationplatform.yml.j2
+++ b/roles/generate_kubemanifests/templates/ansibleautomationplatform.yml.j2
@@ -41,6 +41,64 @@ spec:
 
   eda:
     disabled: true
+    activation_worker:
+      replicas: 2
+    admin_user: admin
+    api:
+      gunicorn_workers: 2
+      replicas: 1
+    default_worker:
+      replicas: 2
+    event_stream:
+      gunicorn_workers: 2
+      replicas: 1
+    image_pull_policy: IfNotPresent
+    ingress_type: Route
+    no_log: true
+    redis:
+      replicas: 1
+    scheduler:
+      replicas: 2
+    ui:
+      replicas: 1
+    worker:
+      replicas: 2
 
   hub:
     disabled: true
+    api:
+      log_level: INFO
+      replicas: 1
+    content:
+      log_level: INFO
+      replicas: 2
+    file_storage_size: 5Gi
+    file_storage_access_mode: ReadWriteOnce
+    file_storage_storage_class: lvms-vg1
+    force_drop_db: false
+    gunicorn_api_workers: 2
+    gunicorn_content_workers: 2
+    gunicorn_timeout: 90
+    haproxy_timeout: 180s
+    image_pull_policy: IfNotPresent
+    ingress_type: Route
+    loadbalancer_port: 80
+    loadbalancer_protocol: http
+    nginx_client_max_body_size: 10m
+    nginx_proxy_connect_timeout: 120s
+    nginx_proxy_read_timeout: 120s
+    nginx_proxy_send_timeout: 120s
+    no_log: true
+    postgres_storage_class: lvms-vg1
+    redis:
+      log_level: INFO
+      replicas: 1
+    redis_storage_class: lvms-vg1
+    resource_manager:
+      replicas: 1
+    route_tls_termination_mechanism: Edge
+    storage_type: File
+    web:
+      replicas: 1
+    worker:
+      replicas: 2
