Add support for routes; Update expected structure of defined objects to use metadata

--- a/roles/generate_kubemanifests/templates/operatorgroup.yml.j2
+++ b/roles/generate_kubemanifests/templates/operatorgroup.yml.j2
@@ -1,8 +1,6 @@
 ---
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
-metadata:
-  name: "{{ item.name }}"
-  namespace: "{{ item.namespace }}"
+metadata: {}
 spec:
   targetNamespaces: []
