--- a/roles/generate_kubemanifests/templates/configmap.yml.j2
+++ b/roles/generate_kubemanifests/templates/configmap.yml.j2
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ item.name }}
+  name: {{ item.metadata.name }}
   namespace: {{ ocp_namespace }}
 data: {{ item.data | to_yaml }}
