--- a/roles/generate_kubemanifests/templates/pvc.yml.j2
+++ b/roles/generate_kubemanifests/templates/pvc.yml.j2
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ item.name }}
+  name: ""
   namespace: {{ ocp_namespace }}
 spec:
   accessModes:
