--- a/roles/generate_kubemanifests/templates/secret.yml.j2
+++ b/roles/generate_kubemanifests/templates/secret.yml.j2
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ item.name }}
+  name: {{ item.metadata.name }}
   namespace: {{ ocp_namespace }}
 data:
 {% for k,v in item.data.items() %}
