Update subscription template

--- a/roles/generate_kubemanifests/templates/subscription.yml.j2
+++ b/roles/generate_kubemanifests/templates/subscription.yml.j2
@@ -5,6 +5,6 @@ metadata: {}
 spec:
   channel: stable-2.5-cluster-scoped
   installPlanApproval: Manual
-  name: "{{ item.metadata.name }}"
+  name: ansible-automation-platform-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
